# pyRejseplan

./: .gitignore  AGENTS.md  README.md  _version.py  main.py  pyRejseplan.code-workspace  pyproject.toml
.github/workflows/: build_release.yml
pyRejseplan/: _version.py  constants.py
requestData/: mdbRoskildeSt.pkl
scripts/: release.ps1
src/pyRejseplan/: __init__.py  constants.py  departureboard.py  locationhandler.py
src/pyRejseplan/dataclasses/: __init__.py  stoplocation.py
src/py_rejseplan/: __init__.py  __main__.py  departureboard.py  locationhandler.py  utils.py
src/py_rejseplan/api/: base.py  departures.py
src/py_rejseplan/dataclasses/: __init__.py  departure.py  departure_board.py  product_at_stop.py  stop.py  stoplocation.py
src/py_rejseplan/exceptions/: api_error.py  connection_error.py  http_error.py
src/py_rejseplan/version/: __version__.py
tests/dataclasses/: test_departure_board.py  test_transport_class_mixin.py
tests/departureboard/: conftest.py  test_auth_required.py  test_get_set.py
tests/depatures/: test_departures_client.py  test_departures_client_async.py
tests/exceptions/: test_exceptions.py
